--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "soap": "^0.37.0",
     "strong-soap": "^3.2.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xml2js": "^0.4.23"
   }
 }
