--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -21,9 +21,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "soap": "^0.37.0",
     "strong-soap": "^3.2.1",
     "uuid": "^8.3.2",
-    "xml2js": "^0.4.23"
+    "xml-js": "^1.6.11"
   }
 }
