adding iam access to appsync

--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -27,6 +27,8 @@ provider:
   environment:
     SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
     TU_SECRET_LOCATION: '${self:provider.stage}/agency-services/transunion'
+    GRAPHQL_API:
+      dev: 'rr5wtr4ev5exlbutrkih3r5lhq'
   vpc:
     securityGroupIds:
       - !GetAtt NatGatewayLambdaSecurityGroup.GroupId
@@ -39,6 +41,11 @@ provider:
         - secretsmanager:GetSecretValue
       Resource:
         - '*'
+    - Effect: Allow
+      Resource:
+        - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:provider.environment.GRAPHQL_API.${opt:stage}}*'
+      Action:
+        - appsync:GraphQL
 
 layers:
   TuCerts:
