--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -23,6 +23,7 @@
     "aws-appsync": "^4.0.3",
     "axios": "^0.21.1",
     "fast-xml-parser": "^3.19.0",
+    "isomorphic-fetch": "^3.0.0",
     "strong-soap": "^3.2.1",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
