--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -35,6 +35,7 @@ provider:
     SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
     TU_SECRET_LOCATION: '${self:provider.stage}/agency-services/transunion'
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
+    APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
   vpc:
     securityGroupIds:
       - !GetAtt NatGatewayLambdaSecurityGroup.GroupId
@@ -47,10 +48,13 @@ provider:
         - secretsmanager:GetSecretValue
       Resource:
         - '*'
-    - Effect: Allow
-      Resource:
-        - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}*'
-      Action: '*'
+    # - Effect: Allow
+    #   Resource:
+    #     - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/*'
+    #     - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Query/*'
+    #     - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Mutation/*'
+    #     - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Subscription/*'
+    #   Action: 'appsync:GraphQL'
 
 layers:
   TuCerts:
@@ -58,6 +62,7 @@ layers:
 
 functions:
   graphql:
+    role: LambdaExecutionRole
     handler: src/handlers/graphql.main
     layers:
       - { Ref: TuCertsLambdaLayer }
@@ -76,6 +81,53 @@ functions:
 
 resources:
   Resources:
+    LambdaExecutionRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: !Sub 'braveappAgencyLambdaRole-${opt:stage}'
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service: appsync.amazonaws.com
+              Action: sts:AssumeRole
+    lambdaexecutionpolicy:
+      DependsOn:
+        - { Ref: LambdaExecutionRole }
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: lambda-execution-policy
+        Roles:
+          - { Ref: LambdaExecutionRole }
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource:
+                - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/${self:service}-${opt:stage}-graphql:log-stream:*'
+    AmplifyResourcesPolicy:
+      DependsOn:
+        - { Ref: LambdaExecutionRole }
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: amplify-lambda-execution-policy
+        Roles:
+          - { Ref: LambdaExecutionRole }
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - appsync:GraphQL
+              Resource:
+                - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Query/*'
+                - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Mutation/*'
+                - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Subscription/*'
     # TransunionData:
     #   Type: AWS::DynamoDB::Table
     #   Properties:
