--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -64,6 +64,8 @@ functions:
     handler: src/handlers/graphql.main
     layers:
       - { Ref: TuCertsLambdaLayer }
+  sync:
+    handler: src/handlers/sync.main
   postRequests:
     handler: src/handlers/postRequests.main
     layers:
