--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -15,6 +15,7 @@ custom:
   bundle:
     externals:
       - strong-soap
+      - ajv
     linting: false
   settings:
     GRAPHQL_APIENDPOINTOUTPUT: !ImportValue GraphQLAPIEndpointOutput
