--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -12,8 +12,6 @@ plugins:
 
 custom:
   bundle:
-    externals:
-      - ajv
     linting: false
   snsProxy: !Sub '${self:provider.stage}-api-endpoints-sns-proxy'
   settings:
@@ -58,14 +56,15 @@ provider:
 layers:
   TuCerts:
     path: tucerts
-  Ajv:
-    path: ajv
+  CommonLibs:
+    path: commonLibs
 
 functions:
   graphql:
     handler: src/handlers/graphql.main
     layers:
       - { Ref: TuCertsLambdaLayer }
+      - { Ref: CommonLibsLambdaLayer }
   postRequests:
     handler: src/handlers/postRequests.main
     layers:
