--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -20,6 +20,7 @@
     "serverless-offline": "^6.8.0"
   },
   "dependencies": {
+    "ajv": "^7.0.2",
     "aws-appsync": "^4.0.3",
     "aws4": "^1.11.0",
     "axios": "^0.21.1",
