--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -31,7 +31,7 @@ provider:
     - !Ref TuCertsLambdaLayer
   environment:
     NODE_ENV: development
-    # SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
+    SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
     TU_SECRET_LOCATION: '${self:provider.stage}/agency-services/transunion'
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
