--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -19,8 +19,12 @@ custom:
     GRAPHQL_APIENDPOINTOUTPUT: !ImportValue GraphQLAPIEndpointOutput
     GRAPHQL_API:
       dev: 'rr5wtr4ev5exlbutrkih3r5lhq'
+      qa: 'rr5wtr4ev5exlbutrkih3r5lhq'
+      pdor: '4tpaga7rzjayhk75opsmpeurme'
     GRAPHQL_ENDPOINT:
       dev: 'https://24ga46y3gbgodogktqwhh7vryq.appsync-api.us-east-2.amazonaws.com/graphql'
+      qa: 'https://24ga46y3gbgodogktqwhh7vryq.appsync-api.us-east-2.amazonaws.com/graphql'
+      prod: 'https://krybm5pc3nbgdk4zwgcva2i4va.appsync-api.us-east-2.amazonaws.com/graphql'
 
 provider:
   name: aws
@@ -30,8 +34,7 @@ provider:
   layers:
     - !Ref TuCertsLambdaLayer
   environment:
-    NODE_ENV: development
-    SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
+    NODE_ENV: ${opt:stage, 'dev'}
     TU_SECRET_LOCATION: '${self:provider.stage}/agency-services/transunion'
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
@@ -64,18 +67,20 @@ functions:
     timeout: 30
     layers:
       - { Ref: TuCertsLambdaLayer }
-  postRequests:
-    handler: src/handlers/postRequests.main
-    layers:
-      - { Ref: TuCertsLambdaLayer }
-    events:
-      - sns:
-          arn: ${self:provider.environment.SNS_PROXY_ARN}
-          topicName: SnsProxyTopic
-          integration: lambda-proxy
-          filterPolicy:
-            service:
-              - 'transunion'
+  # postRequests:
+  #   handler: src/handlers/postRequests.main
+  #   layers:
+  #     - { Ref: TuCertsLambdaLayer }
+  #   events:
+  #     - sns:
+  #         arn: ${self:provider.environment.SNS_PROXY_ARN}
+  #         topicName: SnsProxyTopic
+  #         integration: lambda-proxy
+  #         filterPolicy:
+  #           service:
+  #             - 'transunion'
+
+  # SNS_PROXY_ARN: !ImportValue ${self:custom.snsProxy}
 
 resources:
   Resources:
@@ -299,57 +304,57 @@ resources:
             CidrIp: 0.0.0.0/0
 
     # Create our 'TransunionQueue' SQS queue
-    TransunionQueue:
-      Type: 'AWS::SQS::Queue'
-      Properties:
-        QueueName: ${self:provider.stage}-${self:service}-sqs
-        ReceiveMessageWaitTimeSeconds: 20
-        RedrivePolicy:
-          deadLetterTargetArn: !GetAtt
-            - TransunionQueueDLQ
-            - Arn
-          maxReceiveCount: 3
+    # TransunionQueue:
+    #   Type: 'AWS::SQS::Queue'
+    #   Properties:
+    #     QueueName: ${self:provider.stage}-${self:service}-sqs
+    #     ReceiveMessageWaitTimeSeconds: 20
+    #     RedrivePolicy:
+    #       deadLetterTargetArn: !GetAtt
+    #         - TransunionQueueDLQ
+    #         - Arn
+    #       maxReceiveCount: 3
 
     # Create our 'TransunionQueue' Dead Letter Queue SQS queue
-    TransunionQueueDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        QueueName: ${self:provider.stage}-${self:service}-dlq
-        ReceiveMessageWaitTimeSeconds: 20
+    # TransunionQueueDLQ:
+    #   Type: AWS::SQS::Queue
+    #   Properties:
+    #     QueueName: ${self:provider.stage}-${self:service}-dlq
+    #     ReceiveMessageWaitTimeSeconds: 20
 
     # Create our queue policy for the 'TransunionQueue'
-    SnsToTransunionQueueSqsPolicy:
-      Type: AWS::SQS::QueuePolicy
-      Properties:
-        PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Sid: 'allow-sns-messages'
-              Effect: Allow
-              Principal: '*'
-              Resource: !GetAtt
-                - TransunionQueue
-                - Arn
-              Action: 'SQS:SendMessage'
-              Condition:
-                ArnEquals:
-                  'aws:SourceArn': ${self:provider.environment.SNS_PROXY_ARN}
-        Queues:
-          - Ref: TransunionQueue
+    # SnsToTransunionQueueSqsPolicy:
+    #   Type: AWS::SQS::QueuePolicy
+    #   Properties:
+    #     PolicyDocument:
+    #       Version: '2012-10-17'
+    #       Statement:
+    #         - Sid: 'allow-sns-messages'
+    #           Effect: Allow
+    #           Principal: '*'
+    #           Resource: !GetAtt
+    #             - TransunionQueue
+    #             - Arn
+    #           Action: 'SQS:SendMessage'
+    #           Condition:
+    #             ArnEquals:
+    #               'aws:SourceArn': ${self:provider.environment.SNS_PROXY_ARN}
+    #     Queues:
+    #       - Ref: TransunionQueue
 
     # Create the subscription from the transunion SQS to the SNS proxy'
-    TransunionQueueSubscription:
-      Type: 'AWS::SNS::Subscription'
-      Properties:
-        TopicArn: ${self:provider.environment.SNS_PROXY_ARN}
-        Endpoint: !GetAtt
-          - TransunionQueue
-          - Arn
-        Protocol: sqs
-        FilterPolicy:
-          service:
-            - 'transunion:batch'
-        RawMessageDelivery: 'true'
+    # TransunionQueueSubscription:
+    #   Type: 'AWS::SNS::Subscription'
+    #   Properties:
+    #     TopicArn: ${self:provider.environment.SNS_PROXY_ARN}
+    #     Endpoint: !GetAtt
+    #       - TransunionQueue
+    #       - Arn
+    #     Protocol: sqs
+    #     FilterPolicy:
+    #       service:
+    #         - 'transunion:batch'
+    #     RawMessageDelivery: 'true'
 
   Outputs:
     VPC:
