--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -28,6 +28,7 @@
     "fast-xml-parser": "^3.19.0",
     "he": "^1.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "jwk-to-pem": "^2.0.5",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
   }
