--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -17,6 +17,10 @@ custom:
   snsProxy: !Sub '${self:provider.stage}-api-endpoints-sns-proxy'
   settings:
     GRAPHQL_APIENDPOINTOUTPUT: !ImportValue GraphQLAPIEndpointOutput
+    POOL_IDS:
+      dev: 'us-east-2_beTcykTM9'
+      qa: 'us-east-2_beTcykTM9'
+      prod: 'us-east-2_R22DawoAR'
     GRAPHQL_API:
       dev: 'rr5wtr4ev5exlbutrkih3r5lhq'
       qa: 'rr5wtr4ev5exlbutrkih3r5lhq'
@@ -36,6 +40,7 @@ provider:
   environment:
     NODE_ENV: ${opt:stage, 'dev'}
     TU_SECRET_LOCATION: '${self:provider.stage}/agency-services/transunion'
+    POOL_ID: '${self:custom.settings.POOL_IDS.${opt:stage}}'
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
   vpc:
