--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -20,6 +20,7 @@
     "serverless-offline": "^6.8.0"
   },
   "dependencies": {
+    "@shiftcoders/dynamo-easy": "^7.1.0",
     "ajv": "^7.0.2",
     "aws-appsync": "^4.0.3",
     "aws4": "^1.11.0",
@@ -29,6 +30,7 @@
     "he": "^1.2.0",
     "isomorphic-fetch": "^3.0.0",
     "jwk-to-pem": "^2.0.5",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
   }
