building out db util and adding jest types

--- a/agency-services-transunion/tsconfig.json
+++ b/agency-services-transunion/tsconfig.json
@@ -7,6 +7,6 @@
     "resolveJsonModule": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "types": ["reflect-metadata", "node"]
+    "types": ["reflect-metadata", "node", "jest"]
   }
 }
