--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -179,6 +179,23 @@ resources:
     #     TableName: ${self:provider.environment.TABLENAME}
     #     StreamSpecification:
     #       StreamViewType: NEW_AND_OLD_IMAGES
+    CreditScoreTrackings:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: 'userId'
+            AttributeType: 'S'
+          - AttributeName: 'bureauId'
+            AttributeType: 'S'
+        KeySchema:
+          - AttributeName: 'userId'
+            KeyType: 'HASH'
+          - AttributeName: 'bureauId'
+            KeyType: 'RANGE'
+        BillingMode: PAY_PER_REQUEST
+        TableName: CreditScoreTrackings
+        StreamSpecification:
+          StreamViewType: NEW_AND_OLD_IMAGES
     InvestigationResults:
       Type: AWS::DynamoDB::Table
       Properties:
