adding trigger for new enrollments
this creates a record in the credit score tracking table when the user first enrolls in the transunion service

--- a/agency-services-transunion/.eslintrc.json
+++ b/agency-services-transunion/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
