--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -33,6 +33,10 @@ custom:
       dev: '24ga46y3gbgodogktqwhh7vryq.appsync-api.us-east-2.amazonaws.com'
       qa: '24ga46y3gbgodogktqwhh7vryq.appsync-api.us-east-2.amazonaws.com'
       prod: 'krybm5pc3nbgdk4zwgcva2i4va.appsync-api.us-east-2.amazonaws.com'
+    APPDATA_STREAMS:
+      dev: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
+      qa: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
+      prod: '4tpaga7rzjayhk75opsmpeurme:GetAtt:AppDataTable:StreamArn'
 
 provider:
   name: aws
@@ -116,6 +120,16 @@ functions:
       - { Ref: TuCertsLambdaLayer }
     events:
       - schedule: cron(0 16 17 * ? *)
+  triggerCreateCreditScoreTracking:
+    handler: src/triggers/triggerCreateCreditScoreTracking.main
+    timeout: 30
+    events:
+      - stream:
+          type: dynamodb
+          batchSize: 100
+          startingPosition: LATEST
+          arn:
+            Fn::ImportValue: '${self:custom.settings.APPDATA.${opt:stage}}'
   seedCreditScoreTrackingsTable:
     handler: src/handlers/transunion/seedCreditScoreTrackingsTable.main
     timeout: 30
