--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -60,6 +60,7 @@ provider:
     POOL_ID: '${self:custom.settings.POOL_IDS.${opt:stage}}'
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
+    TU_SNS_PROXY_ARN: !Ref TransunionSNSTopic
   vpc:
     securityGroupIds:
       - !GetAtt NatGatewayLambdaSecurityGroup.GroupId
