removing filtering for testing

--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -463,9 +463,9 @@ resources:
           - TransunionQueue
           - Arn
         Protocol: sqs
-        FilterPolicy:
-          service:
-            - 'transunion:batch'
+        # FilterPolicy:
+        #   service:
+        #     - 'transunion:batch'
         RawMessageDelivery: 'true'
 
   Outputs:
