--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -80,6 +80,15 @@ provider:
         - !Sub 'arn:aws:appsync:${AWS::Region}:${AWS::AccountId}:apis/${self:custom.settings.GRAPHQL_API.${opt:stage}}/types/Subscription/*'
       Action: 'appsync:GraphQL'
     - Effect: 'Allow'
+      Action: 'sns:Publish'
+      Resource: '*'
+    - Effect: 'Allow'
+      Action:
+        - sqs:ReceiveMessage
+        - sqs:DeleteMessage
+        - sqs:GetQueueAttributes
+      Resource: '*'
+    - Effect: 'Allow'
       Action:
         - dynamodb:ListStreams
         - dynamodb:DescribeTable
