--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -37,6 +37,9 @@ custom:
       dev: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
       qa: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
       prod: '4tpaga7rzjayhk75opsmpeurme:GetAtt:AppDataTable:StreamArn'
+    APPTABLES:
+      dev: 'AppData-rr5wtr4ev5exlbutrkih3r5lhq-dev'
+      prod: 'AppData-4tpaga7rzjayhk75opsmpeurme-prod'
 
 provider:
   name: aws
@@ -61,6 +64,7 @@ provider:
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
     TU_SNS_PROXY_ARN: !Ref TransunionSNSTopic
+    APPTABLE: ${self:custom.settings.APPTABLES.${opt:stage}}
   vpc:
     securityGroupIds:
       - !GetAtt NatGatewayLambdaSecurityGroup.GroupId
